--- a/bibList.html
+++ b/bibList.html
@@ -140,15 +140,15 @@
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="images/Group 99.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 99bib.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">כללי ציטוט</h5>
-            <p class="card-text">הרחבה על כתיבת כללי ציטוט ברשימה הביבליוגרפית</p>
+            <h5 class="card-title">מהי רשימה ביבליוגרפית?</h5>
+            <p class="card-text">הרחבה על רשימה ביבליוגרפית ושיטות הכתיבה השונות</p>
           </div>
           <div class="p-3 d-none d-md-block">
-            <span class="badge badge-pill badge-light w-auto">מסמך מסכם</span>
+            <span class="badge badge-pill badge-light w-auto">לומדה</span>
             <span class="badge badge-pill badge-light w-auto"> 
-              3 דקות</span> 
+              2 דקות</span> 
           </div>
         </div>
       </div>
@@ -162,9 +162,23 @@
           <div class="p-3 d-none d-md-block">
             <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
             <span class="badge badge-pill badge-light w-auto"> 
-              3 דקות</span> 
+              2:30 דקות</span> 
           </div>
       </div>
+      </div>
+      <div class="col pb-4">
+        <div class="card cardInnerPage">
+          <img src="images/Group 103.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <div class="card-body d-flex flex-column" >
+            <h5 class="card-title">כללי ציטוט</h5>
+            <p class="card-text">כתיבת רישום ביביליוגרפי למקורות מידע שונים בהתאם לשיטת הכתיבה הנדרשת</p>
+          </div>
+          <div class="p-3 d-none d-md-block">
+            <span class="badge badge-pill badge-light w-auto">עזר לימודי</span>
+            <span class="badge badge-pill badge-light w-auto"> 
+              2 דקות</span> 
+          </div>
+        </div>
       </div>
     </div>
     </div>
