--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -135,6 +135,31 @@
         <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5> 
       <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
         <div class="col pb-4">
+          <div class="card cardInnerPage"  id="tobooleanRise">
+            <img src="images/Group 93.png" class="card-img-top" alt="..." style="padding: 10px;">
+            <div class="card-body d-flex flex-column" >
+              <h5 class="card-title">שימוש בלוגיקה בוליאנית</h5>
+              <p class="card-text">הסבר על אופן השימוש באופרטורים AND, OR, NOT לייעול החיפוש </p>
+            </div>
+            <div class="p-3 d-none d-md-block">
+              <span class="badge badge-pill badge-light w-auto">לומדה</span>
+              <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
+            </div>
+          </div>
+        </div>
+        <div class="col pb-4">
+          <div class="card cardInnerPage"  id="toEnglishSearchRise">
+            <img src="images/Group 95.png" class="card-img-top" alt="..." style="padding: 10px;">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">חיפוש יעיל בשפה האנגלית</h5>
+              <p class="card-text">שימוש נכון במילות מפתח בשפה האנגלית ובכלים טכנולוגיים המסייעים בהרחבת מילות החיפוש עתיד לקצר את תהליך החיפוש באופן משמעותי</div>
+                <div class="p-3 d-none d-md-block">
+                  <span class="badge badge-pill badge-light w-auto">לומדה</span>
+              <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
+            </div>
+            </div>
+        </div>
+        <div class="col pb-4">
         <div class="card cardInnerPage">
           <img src="images/Group 92.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column">
@@ -144,36 +169,13 @@
               של תוצאות החיפוש במאגר המידע  </p>
        </div>
        <div class="p-3 d-none d-md-block">
-        <span class="badge badge-pill badge-light w-auto">סרטון</span>
+        <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
             <span class="badge badge-pill badge-light w-auto"> 3 דקות</span> 
         </div>
       </div>
       </div>
-      <div class="col pb-4">
-        <div class="card cardInnerPage"  id="tobooleanRise">
-          <img src="images/Group 93.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">אופרטורים בוליאניים</h5>
-            <p class="card-text">הסבר על אופן השימוש באופרטורים AND, OR, NOT לייעול החיפוש </p>
-          </div>
-          <div class="p-3 d-none d-md-block">
-            <span class="badge badge-pill badge-light w-auto">לומדה</span>
-            <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
-          </div>
-        </div>
-      </div>
-      <div class="col pb-4">
-        <div class="card cardInnerPage"  id="toEnglishSearchRise">
-          <img src="images/Group 95.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">חיפוש בשפה האנגלית</h5>
-            <p class="card-text">שימוש נכון במילות מפתח בשפה האנגלית ובכלים טכנולוגיים המסייעים בהרחבת מילות החיפוש עתיד לקצר את תהליך החיפוש באופן משמעותי</div>
-              <div class="p-3 d-none d-md-block">
-                <span class="badge badge-pill badge-light w-auto">לומדה</span>
-            <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
-          </div>
-          </div>
-      </div>
+   
+    
     </div>
   </div>
     </div>
