--- a/startpage.html
+++ b/startpage.html
@@ -146,22 +146,22 @@
             <p class="card-text">היכרות בסיסית עם הפורטל והסבר על אופן ההתחברות מעמדת המידע</p>
           </div>
           <div class="p-3 d-none d-md-block">
-            <span class="badge badge-pill badge-light w-auto">סרטון</span>
+            <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
             <span class="badge badge-pill badge-light w-auto"> 
-              3 דקות</span> 
+              1:40 דקות</span> 
           </div>
       </div>
       </div>
       <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="images/Group 85.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/GroupIconLIB.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h6 class="card-title">קטלוג הספרייה</h5>
             <p class="card-text"> קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו: חיפוש ספרים, מאמרים ופרויקטי גמר</div>
               <div class="p-3 d-none d-md-block ">
-                <span class="badge badge-pill badge-light w-auto">סרטון</span>
+                <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
             <span class="badge badge-pill badge-light w-auto"> 
-              3 דקות</span> 
+              2:20 דקות</span> 
           </div>
         </div>
       </div> 
