--- a/dataBases.html
+++ b/dataBases.html
@@ -167,6 +167,19 @@
           </div>
           </div>
         </div>
+        <div class="col pb-4">
+          <div class="card cardInnerPage">
+            <img src="images/Group Chart.png"src="images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
+            <div class="card-body d-flex flex-column" style="min-height: 110px;">
+              <h5 class="card-title">מאגרי מידע לפי פקולטות</h5>
+              <p class="card-text">חלוקה של כלל מאגרי המידע אליהם מנויה הספרייה לפי פקולטות לתואר ראשון במכון הטכנולוגי HIT </p>
+            </div>
+            <div class="p-3 d-none d-md-block">
+              <span class="badge badge-pill badge-light w-auto">עזר לימודי</span>
+              <span class="badge badge-pill badge-light w-auto"> 2 דקות</span> 
+            </div>
+            </div>
+          </div>
     </div>
     </div>
     </div>
