--- a/sitemap.html
+++ b/sitemap.html
@@ -133,18 +133,18 @@
    <main>
     <div class="container" style="margin-top: -80px;">
       <div class="text-lg-start">
-        <h5 class="pb-3"><a href="about.html">אודות</a></h5>
-        <h5>תכני לימוד</h5>
-        <ul class="list-unstyled pb-1">
+        <h5 class="pb-3 smaller-font"><a href="about.html">אודות</a></h5>
+        <h5 class="smaller-font">תכני לימוד</h5>
+        <ul class="list-unstyled sitemap pb-1">
           <li><a href="startpage.html">איך מתחילים?</a></li>
           <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
           <li><a href="dataBases.html">מאגרי מידע</a></li>
           <li><a href="searchingArticles.html">חיפוש מאמרים</a></li>
           <li><a href="bibList.html">רשימה ביבליוגרפית</a></li>
         </ul>
-        <h5><a href="faqPage.html">שאלות נפוצות</a></h5>
-
-  </div>
+        <h5 class="smaller-font" style="text-decoration:underline;"><a href="faqPage.html">שאלות נפוצות</a></h5>
+      </div>
+    </div>
 </main>
 
   
