--- a/about.html
+++ b/about.html
@@ -117,10 +117,10 @@
          </nav> 
         </div>
           <!--סוף פירורי לחם-->
-     <div class="container py-5 px-lg-5">
+     <div class="container my-lg-5 py-5 px-lg-5">
           <div class="row g-5 py-lg-5">
             <div class="container">  
-              <div class="section-title position-relative text-start ">
+              <div class="section-title position-relative text-start mb-5 pb-2">
                 <h2 >אודות</h2>                
             </div>
           </div>
@@ -129,8 +129,8 @@
       </div>
     </div>
      </div>
-     </header>      
-   <main>
+     </header>     
+     <main>
       <div class="container">
         <div class="text-lg-center text-sm-start">
           אתר זה מיועד עבור סטודנטים הלומדים במכון הטכנולוגי בחולון HIT.<br>
@@ -138,10 +138,45 @@
           כגון: לומדות, סרטונים ועזרי למידה שימושיים.
         </div>
         <div class="text-start mt-5">
-        <h4>הכירו את צוות הספרייה</h4>
+          <h4>הכירו את צוות הספרייה</h4>
+        </div>
+    
+        <div class="row mt-5">
+          <div class="col-2"></div>
+          <div class="col-2">
+            <div class="circle-image">
+              <img src="images/Mina_Eder_129x140.jpg">
+              <div class="image-text">Text 1</div>
+            </div>
+          </div>
+          <div class="col-2">
+            <div class="circle-image">
+              <img src="image2.jpg" alt="Image 2">
+              <div class="image-text">Text 2</div>
+            </div>
+          </div>
+          <div class="col-2">
+            <div class="circle-image">
+              <img src="image3.jpg" alt="Image 3">
+              <div class="image-text">Text 3</div>
+            </div>
+          </div>
+          <div class="col-2">
+            <div class="circle-image">
+              <img src="image4.jpg" alt="Image 4">
+              <div class="image-text">Text 4</div>
+            </div>
+          </div>
+          <div class="col-2">
+            <div class="circle-image">
+              <img src="image5.jpg" alt="Image 5">
+              <div class="image-text">Text 5</div>
+            </div>
+          </div>
+          <div class="col-2"></div>
+        </div>
       </div>
-      </div>
-</main>
+    </main>
 
   
 <footer class="footer rtl-footer-bg py-3 d-flex">
