--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <ul class="submenu dropdown-menu">
               <li><a class="dropdown-item" href="#">חיפוש מתקדם</a></li>
               <li><a class="dropdown-item" href="booleanpage.html">לוגיקה בוליאנית</a></li>
-              <li><a class="dropdown-item" href="testpage.html">חיפוש יעיל באנגלית</a> </li>
+              <li><a class="dropdown-item" href="englishRisePage.html">חיפוש יעיל באנגלית</a> </li>
             </ul>
           </li>
           <li> <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית&raquo; </a>
