--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -65,7 +65,7 @@
             <ul class="submenu dropdown-menu">
               <li><a class="dropdown-item" href="#">חיפוש מתקדם</a></li>
               <li><a class="dropdown-item" href="#">לוגיקה בוליאנית</a></li>
-              <li><a class="dropdown-item" href="#">חיפוש יעיל באנגלית</a> </li>
+              <li><a class="dropdown-item" href="englishRisePage.html">חיפוש יעיל באנגלית</a> </li>
             </ul>
           </li>
           <li> <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית&raquo; </a>
