--- a/testpage.html
+++ b/testpage.html
@@ -67,7 +67,7 @@
             <ul class="submenu dropdown-menu">
               <li><a class="dropdown-item" href="#">חיפוש מתקדם</a></li>
               <li><a class="dropdown-item" href="#">לוגיקה בוליאנית</a></li>
-              <li><a class="dropdown-item" href="testpage.html">חיפוש יעיל באנגלית</a> </li>
+              <li><a class="dropdown-item" href="englishRisePage.html">חיפוש יעיל באנגלית</a> </li>
             </ul>
           </li>
           <li> <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית&raquo; </a>
@@ -104,7 +104,7 @@
    
    <main>
     <div class="container" >
-    <iframe src="englishSearch/englishSearchRise.html" width="100%" height="500"></iframe>
+    <iframe src="englishSearch/ק.html" width="100%" height="500"></iframe>
   </div>
 </main>
 
