--- a/about.html
+++ b/about.html
@@ -130,53 +130,60 @@
     </div>
      </div>
      </header>     
-     <main>
+     <main style="margin-top: -8%;">
       <div class="container">
-        <div class="text-lg-center text-sm-start">
+        <div class="text-lg-center text-sm-start" style="font-size: 18px;">
           אתר זה מיועד עבור סטודנטים הלומדים במכון הטכנולוגי בחולון HIT.<br>
-          באתר ניתן למצוא מגוון יחידות לימוד דיגיטליות וחוויותיות להיכרות בסיסית עם נושא האוריינות האקדמית <br>
-          כגון: לומדות, סרטונים ועזרי למידה שימושיים.
+          באתר ניתן למצוא מגוון יחידות לימוד דיגיטליות וחוויותיות להיכרות בסיסית עם נושא האוריינות האקדמית כגון: לומדות, סרטונים ועזרי למידה שימושיים.
         </div>
-        <div class="text-start mt-5">
+        <div class="text-start pt-4">
           <h4>הכירו את צוות הספרייה</h4>
         </div>
-    
-        <div class="row mt-5">
-          <div class="col-2"></div>
-          <div class="col-2">
-            <div class="circle-image">
-              <img src="images/Mina_Eder_129x140.jpg">
-              <div class="image-text">Text 1</div>
+        <div class="row">
+          <div class="col-sm-2 col-4 mb-4">
+            <img src="images/Group 233.png" alt="Image 1" class="img-fluid">
+            <div class="text-start">
+              <p>גב' מיכל חיל - מנהלת הספרייה</p>
+              <p>דוא"ל: michalch@hit.ac.il </p>
+              <p>טלפון: 03-5026545</p>
             </div>
           </div>
-          <div class="col-2">
-            <div class="circle-image">
-              <img src="image2.jpg" alt="Image 2">
-              <div class="image-text">Text 2</div>
+          <div class="col-sm-2 col-4 mb-4">
+            <img src="images/Ellipse 44.png" alt="Image 2" class="img-fluid">
+            <div class="text-start">
+              <p>גב' אסטה ורזר - אחראית יעץ, מידע והדרכות</p>
+              <p>דוא"ל: ester@hit.ac.il</p>
+              <p>טלפון: 03-5026826</p>
             </div>
           </div>
-          <div class="col-2">
-            <div class="circle-image">
-              <img src="image3.jpg" alt="Image 3">
-              <div class="image-text">Text 3</div>
+          <div class="col-sm-2 col-4 mb-4">
+            <img src="images/Group 234.png" alt="Image 3" class="img-fluid">
+            <div class="text-center">
+              <p>גב' פולי פליישר - ספרנית השאלה ואחראית עיבוד טכני</p>
+              <p>דוא"ל: polyb@hit.ac.il</p>
+              <p>טלפון: 03-5026547</p>
             </div>
           </div>
-          <div class="col-2">
-            <div class="circle-image">
-              <img src="image4.jpg" alt="Image 4">
-              <div class="image-text">Text 4</div>
+          <div class="col-sm-2 col-4 mb-4">
+            <img src="images/Group 232.png" alt="Image 4" class="img-fluid">
+            <div class="text-center">
+              <p>גב' מינה עדר - אחראית השאלה</p>
+              <p>דוא"ל: minae@hit.ac.il</p>
+              <p>טלפון: 03-5026547 / 03-5026826</p>
             </div>
           </div>
-          <div class="col-2">
-            <div class="circle-image">
-              <img src="image5.jpg" alt="Image 5">
-              <div class="image-text">Text 5</div>
+          <div class="col-sm-2 col-4 mb-4">
+            <img src="images/Ellipse 44.png" alt="Image 5" class="img-fluid">
+            <div class="text-center">
+              <p>גב' ראואן ברהום- ספרנית השאלה</p>
+              <p>דוא"ל: rawanb@hit.ac.il</p>
+              <p>טלפון: 03-5026545</p>
             </div>
           </div>
-          <div class="col-2"></div>
         </div>
       </div>
     </main>
+    
 
   
 <footer class="footer rtl-footer-bg py-3 d-flex">
