--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 
 <header>
-  <div class="header pb-0">
+  <div class="header">
     <div class="container-xxl py-lg-1 mb-5">
       <div class="container my-5 px-lg-5">
         <div class="row g-5 py-lg-5">
