--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!--לוגו עמוד-->
-    <link rel="icon" type="image/png" href="/images/Logo 3.png">
+    <link rel="icon" type="image/png" href="images/Logo 3.png">
 
 
     <!-- CSS -->
