--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -152,7 +152,7 @@
             <img src="images/Group 95.png" class="card-img-top" alt="..." style="padding: 10px;">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">חיפוש יעיל בשפה האנגלית</h5>
-              <p class="card-text">שימוש נכון במילות מפתח בשפה האנגלית ובכלים טכנולוגיים המסייעים בהרחבת מילות החיפוש עתיד לקצר את תהליך החיפוש באופן משמעותי</div>
+              <p class="card-text">שימוש נכון במילות מפתח בשפה האנגלית עשויי לסייע בהרחבת מילות החיפוש וכן לקצר את תהליך החיפוש באופן משמעותי</div>
                 <div class="p-3 d-none d-md-block">
                   <span class="badge badge-pill badge-light w-auto">לומדה</span>
               <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
