--- a/booleanpage.html
+++ b/booleanpage.html
@@ -104,7 +104,7 @@
    
    <main>
     <div class="container" >
-    <iframe src="boolean/booleanRise.html" width="100%" height="500"></iframe>
+    <iframe src="allTheRisesFolder/boolean/booleanRise.html" width="100%" height="500"></iframe>
   </div>
 </main>
 <footer class="footer rtl-footer-bg py-3 d-flex">
