--- a/englishRisePage.html
+++ b/englishRisePage.html
@@ -9,7 +9,7 @@
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
  <!--לוגו עמוד-->
- <link rel="icon" type="image/png" href="/images/Logo 3.png">
+ <link rel="icon" type="image/png" href="images/Logo 3.png">
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
@@ -104,7 +104,7 @@
    
    <main>
     <div class="container" >
-    <iframe src="englishRise/thehtmlrisepage.html" width="100%" height="600"></iframe>
+    <iframe src="allTheRisesFolder/englishRise/thehtmlrisepage.html" width="100%" height="600"></iframe>
   </div>
 </main>
 
