--- a/testpage.html
+++ b/testpage.html
@@ -9,7 +9,7 @@
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
  <!--לוגו עמוד-->
- <link rel="icon" type="image/png" href="/images/Logo 3.png">
+ <link rel="icon" type="image/png" href="images/Logo 3.png">
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
