--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
      </header>     
      <main style="margin-top: -8%;">
       <div class="container">
-        <div class="text-lg-center text-sm-start" style="font-size: 1px;">
+        <div class="text-lg-start text-sm-start" style="font-size: 18px;">
           אתר זה מיועד עבור סטודנטים הלומדים במכון הטכנולוגי בחולון HIT.<br>
           באתר ניתן למצוא מגוון יחידות לימוד דיגיטליות וחוויותיות להיכרות בסיסית עם נושא האוריינות האקדמית כגון: לומדות, סרטונים ועזרי למידה שימושיים.
         </div>
