--- a/about.html
+++ b/about.html
@@ -103,10 +103,10 @@
 
 
 
+
 <header>
   <div class="header">
-    <div class="headerinpage">
-    <div class="container-xxl py-lg-5 hero-header">
+    <div class="container-xxl pb-lg-5 hero-header">
       <!--פירורי לחם-->
       <div class="pt-3">
       <nav aria-label="breadcrumb">
@@ -117,21 +117,21 @@
          </nav> 
         </div>
           <!--סוף פירורי לחם-->
-     <div class="container my-lg-5 py-5 px-lg-5">
+     <div class="container my-lg-5 py-5">
           <div class="row g-5 py-lg-5">
             <div class="container">  
               <div class="section-title position-relative text-start mb-5 pb-2">
-                <h2 >אודות</h2>                
+                <h2>אודות</h2>                
             </div>
           </div>
        </div>
        </div>
-      </div>
-    </div>
+      </div>  
      </div>
-     </header>     
-     <main style="margin-top: -8%;">
-      <div class="container">
+     </header>
+
+     <main>
+      <div class="container" >
         <div class="text-lg-start text-sm-start" style="font-size: 18px;">
           אתר זה מיועד עבור סטודנטים הלומדים במכון הטכנולוגי בחולון HIT.<br>
           באתר ניתן למצוא מגוון יחידות לימוד דיגיטליות וחוויותיות להיכרות בסיסית עם נושא האוריינות האקדמית כגון: לומדות, סרטונים ועזרי למידה שימושיים.
