--- a/resourcesTypes.html
+++ b/resourcesTypes.html
@@ -81,7 +81,7 @@
         <a class="nav-link" href="faqPage.html">שאלות נפוצות</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">מפת אתר</a>
+        <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
    </ul>
    <form class="form-inline mb-2 mb-md-0 d-flex">
@@ -105,37 +105,36 @@
 
 
 <header>
-<div class="header">
-  <div class="headerinpage">
-  <div class="container-xxl py-5 hero-header">
-    <!--פירורי לחם-->
-    <div class="pt-3">
-    <nav aria-label="breadcrumb ">
-      <ol class="breadcrumb justify-content-start">
-        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-        <li class="breadcrumb-item" aria-current="page">מקורות מידע</li>
-       </ol>
-       </nav> 
-    </div>
-        <!--סוף פירורי לחם-->
-        <div class="container my-lg-5 py-5 px-lg-5">
+  <div class="header">
+   
+    <div class="container-xxl pb-lg-5 hero-header">
+      <!--פירורי לחם-->
+      <div class="pt-3">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb justify-content-start">
+          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+          <li class="breadcrumb-item" aria-current="page">סוגי מקורות מידע</li>
+         </ol>
+         </nav> 
+        </div>
+          <!--סוף פירורי לחם-->
+     <div class="container my-lg-5 py-5">
           <div class="row g-5 py-lg-5">
             <div class="container">  
               <div class="section-title position-relative text-start mb-5 pb-2">
-              <h2 >מקורות מידע</h2>                
+                <h2>סוגי מקורות מידע</h2>                
+            </div>
           </div>
-        </div>
+       </div>
+       </div>
+      </div>
+   
      </div>
-     </div>
-    </div>
-  </div>
-   </div>
-   </header>    
-
-   <Main>
+     </header>   
+   <main>
     <div class="position-relative">
       <img src="images/Vector (1).png" class="background-image">
-      <div class="container p-4 myCardsContainer">
+      <div class="container pt-lg-3 myCardsContainer">
         <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
