--- a/sitemap.html
+++ b/sitemap.html
@@ -105,8 +105,8 @@
 
 <header>
   <div class="header">
-    <div class="headerinpage">
-    <div class="container-xxl py-lg-5 hero-header">
+   
+    <div class="container-xxl pb-lg-5 hero-header">
       <!--פירורי לחם-->
       <div class="pt-3">
       <nav aria-label="breadcrumb">
@@ -117,7 +117,7 @@
          </nav> 
         </div>
           <!--סוף פירורי לחם-->
-     <div class="container my-lg-5 py-5 px-lg-5">
+     <div class="container my-lg-5 py-5">
           <div class="row g-5 py-lg-5">
             <div class="container">  
               <div class="section-title position-relative text-start mb-5 pb-2">
@@ -127,11 +127,12 @@
        </div>
        </div>
       </div>
-    </div>
+   
      </div>
      </header>      
    <main>
-    <div class="container" style="margin-top: -80px;">
+    <div class="container">
+      <div class="row">
       <div class="text-lg-start">
         <h5 class="pb-3 smaller-font"><a href="about.html">אודות</a></h5>
         <h5 class="smaller-font">תכני לימוד</h5>
@@ -145,6 +146,7 @@
         <h5 class="smaller-font" style="text-decoration:underline;"><a href="faqPage.html">שאלות נפוצות</a></h5>
       </div>
     </div>
+  </div>
 </main>
 
   
