--- a/startpage.html
+++ b/startpage.html
@@ -105,32 +105,32 @@
 
 
 <header>
-<div class="header">
-  <div class="headerinpage">
-    <div class="container-xxl py-5 hero-header">
+  <div class="header">
+   
+    <div class="container-xxl pb-lg-5 hero-header">
       <!--פירורי לחם-->
-    <div class="p-3">
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb justify-content-start">
-        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-        <li class="breadcrumb-item" aria-current="page">איך מתחילים</li>
-       </ol>
-       </nav> 
-      </div>
-        <!--סוף פירורי לחם-->
-        <div class="container my-lg-5 py-5 px-lg-5">
-          <div class="row g-5 py-lg-5">
-          <div class="container">  
-            <div class="section-title position-relative text-start mb-5 pb-2">
-              <h2 >איך מתחילים לחפש?</h2>                
-          </div>
+      <div class="pt-3">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb justify-content-start">
+          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+          <li class="breadcrumb-item" aria-current="page">איך מתחילים לחפש</li>
+         </ol>
+         </nav> 
         </div>
+          <!--סוף פירורי לחם-->
+     <div class="container my-lg-5 py-5">
+          <div class="row g-5 py-lg-5">
+            <div class="container">  
+              <div class="section-title position-relative text-start mb-5 pb-2">
+                <h2>איך מתחילים לחפש</h2>                
+            </div>
+          </div>
+       </div>
+       </div>
+      </div>
+   
      </div>
-     </div>
-    </div>
-  </div>
-   </div>
-   </header>    
+     </header>     
 
    <main>
     <div class="position-relative">
