--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -100,32 +100,32 @@
 <!--תפריט ניווט סוף-->
 
 <header>
-<div class="header">
-  <div class="headerinpage">
-  <div class="container-xxl py-5 hero-header">
-    <!--פירורי לחם-->
-    <div class="pt-3">
-    <nav aria-label="breadcrumb ">
-      <ol class="breadcrumb justify-content-start">
-        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-        <li class="breadcrumb-item" aria-current="page">חיפוש מאמרים</li>
-       </ol>
-       </nav> 
-       </div>
-        <!--סוף פירורי לחם-->
-        <div class="container my-lg-5 py-5 px-lg-5">
+  <div class="header">
+   
+    <div class="container-xxl pb-lg-5 hero-header">
+      <!--פירורי לחם-->
+      <div class="pt-3">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb justify-content-start">
+          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+          <li class="breadcrumb-item" aria-current="page">חיפוש מאמרים</li>
+         </ol>
+         </nav> 
+        </div>
+          <!--סוף פירורי לחם-->
+     <div class="container my-lg-5 py-5">
           <div class="row g-5 py-lg-5">
             <div class="container">  
-            <div class="section-title position-relative text-start mb-5 pb-2">
-              <h2 >חיפוש מאמרים</h2>                
+              <div class="section-title position-relative text-start mb-5 pb-2">
+                <h2>חיפוש מאמרים</h2>                
+            </div>
           </div>
-        </div>
+       </div>
+       </div>
+      </div>
+   
      </div>
-     </div>
-    </div>
-  </div>
-   </div>
-   </header>    
+     </header>   
 
 
    <main class="p-4">
