--- a/dataBases.html
+++ b/dataBases.html
@@ -167,7 +167,7 @@
           </div>
         </div>
         <div class="col pb-4">
-          <div class="card cardInnerPage">
+          <div class="card cardInnerPage" id="todataBasesByPage">
             <img src="images/Group Chart.png"src="images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
             <div class="card-body d-flex flex-column" style="min-height: 110px;">
               <h5 class="card-title">מאגרי מידע לפי פקולטות</h5>
