--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
     <div class="col-sm-4 pb-4">
       <div class="card-wrapper">
-        <a href="resourcesTypes.html"  class="text-decoration-none">
+        <a href="dataBases.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 2s;">
         <img src="images/Group 106.png" class="card-img-top" alt="...">
         <div class="card-body">
