--- a/advancedSearchVideoPage.html
+++ b/advancedSearchVideoPage.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="">
 
 <head>
@@ -8,19 +8,16 @@
     <meta name="keywords" content="טכנולוגיות למידה, הדרכות " />
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <!--לוגו עמוד-->
-    <link rel="icon" type="image/png" href="images/Logo 3.png">
-
+ <!--לוגו עמוד-->
+ <link rel="icon" type="image/png" href="images/Logo 3.png">
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
     <link href="styles/myStyle.css" rel="stylesheet" />
-     <!--פונט רוביק-->
-
   <!-- Icon Font Stylesheet -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
 
     <!-- JS -->
     <script src="jScripts/bootstrap.bundle.min.js"></script>
@@ -28,6 +25,8 @@
 
 </head>
 <body lang="he" dir="rtl" class="position-relative">
+
+
 <!--תפריט ניווט-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
   <a class="navbar-brand" href="index.html">
@@ -67,7 +66,7 @@
           <li>   <a href="searchingArticles.html" class="dropdown-item">חיפוש מאמרים&raquo; </a>
             <ul class="submenu dropdown-menu">
               <li><a class="dropdown-item" href="#">חיפוש מתקדם</a></li>
-              <li><a class="dropdown-item" href="booleanpage.html">לוגיקה בוליאנית</a></li>
+              <li><a class="dropdown-item" href="#">לוגיקה בוליאנית</a></li>
               <li><a class="dropdown-item" href="englishRisePage.html">חיפוש יעיל באנגלית</a> </li>
             </ul>
           </li>
@@ -102,102 +101,44 @@
 
 
 <!--תפריט ניווט סוף-->
-
-
 <header>
   <div class="header">
-    <div class="container-xxl py-lg-1 mb-5">
-      <div class="container my-5 px-lg-5">
-        <div class="row g-5 py-lg-5">
-          <div class="col-lg-6 text-sm-start text-lg-start" style="color: #301a4b;">
-            <h1><strong>כיף שהצטרפתם!</strong></h1>
-            <h5 class="pt-4">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
-          </div>
-          <div class="col-lg-4 d-flex justify-content-end ">
-            <img class="img-fluid d-none d-lg-block float-start ml-lg-0" src="images/MainpageImage.png" alt="books">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
+    <div class="container-xxl pb-lg-5 hero-header">
+      <!--פירורי לחם-->
+      <div class="pt-3">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb justify-content-start">
+          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+          <li class="breadcrumb-item" aria-current="page"><a href="searchingArticles.html" class="my-link">חיפוש מתקדם</a> </li>
+          <li class="breadcrumb-item" aria-current="page">חיפוש מתקדם במאגרי מידע</li>
 
-  <main>
-    <div class="container the-index-page-cards-container">
-      <h5 class="mt-2 pb-4 pr-3" style="color: #301a4b; margin-right: 20px;">איזה נושא תרצו ללמוד היום?</h5>
-      <div class="row">
-    <div class="col-sm-4 pb-4">
-      <div class="card-wrapper">
-        <a href="startpage.html"  class="text-decoration-none">
-      <div class="card" style="animation: fadein 1.5s;">
-        <img src="images/Group 242.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">איך מתחילים</h5>
-          <p class="card-text">פורטל הספרייה וקטלוג הספרייה מציעים מאגר חיפוש של ספרים, מאמרים ופרויקטי גמר וביצוע של מגוון פעולות ישירות מעמדת המידע באופן מהיר ופשוט.
-          </p>
+         </ol>
+         </nav> 
         </div>
+          <!--סוף פירורי לחם-->
+     <div class="container my-lg-5 py-5">
+          <div class="row g-5 py-lg-5">
+            <div class="container">  
+              <div class="section-title position-relative text-start mb-5 pb-2">
+                <h2>חיפוש מתקדם במאגרי מידע</h2>                
+            </div>
+          </div>
+       </div>
+       </div>
+      </div>  
+     </div>
+     </header>  
+<main>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 text-center">
+        <iframe allow="autoplay;" allowfullscreen style="border:none" src="https://clipchamp.com/watch/ET0a7r3dk8R/embed" width="100%" height="468"></iframe>
       </div>
-        </a>
-    </div>
-    </div>
-    <div class="col-sm-4 pb-4">
-      <div class="card-wrapper">
-        <a href="resourcesTypes.html"  class="text-decoration-none">
-      <div class="card" style="animation: fadein 1.5s;">
-        <img src="images/Group 105.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">סוגי מקורות מידע</h5>
-          <p class="card-text">כדי לחפש מקורות מידע רלוונטיים באופן מקוון חשוב להכיר את מבנה המאמר האקדמי, את סוגי מקורות המידע האקדמיים הקיימים ולבצע הערכה של אמינות המקורות באינטרנט בהתאם.
-          </p>
-        </div>
-      </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-sm-4 pb-4">
-      <div class="card-wrapper">
-        <a href="dataBases.html"  class="text-decoration-none">
-      <div class="card" style="animation: fadein 2s;">
-        <img src="images/Group 106.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">מאגרי מידע</h5>
-          <p class="card-text">על מנת לבצע חיפוש יעיל במאגרי המידע חשוב להכיר את ההבדלים בין המאגרים, היתרונות והחסרונות והחלוקה לתחומי דעת של כל מאגר והמידע העיקרי המופיע בו. 
-          </p>
-        </div>
-      </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-sm-4 pb-4">
-      <div class="card-wrapper">
-        <a href="searchingArticles.html"  class="text-decoration-none">
-      <div class="card" style="animation: fadein 2.5s;">
-        <img src="images/Group 108.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">חיפוש מאמרים</h5>
-          <p class="card-text">ישנם מספר מושגים בסיסיים שחשוב להכיר ולדעת כיצד ליישם אותם כדי לייעל את תהליך החיפוש. כגון: אופרטורים בוליאניים AND-OR-NOT, מילות מפתח, מילים נרדפות ועוד.</p>
-        </div>
-      </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-sm-4 pb-4">
-      <div class="card-wrapper">
-        <a href="bibList.html"  class="text-decoration-none">
-      <div class="card" style="animation: fadein 3s;">
-        <img src="images/Group 109.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">רשימה ביבליוגרפית</h5>
-          <p class="card-text">כיום בכל עבודה אקדמית ישנה דרישת חובה ליצירת רשימה ביבליוגרפית. כדי ליצור רשימה ביבליוגרפית באופן קל ופשוט חשוב להכיר את כללי הציטוט ולהיעזר בכלים טכנולוגיים ליצירת רשימה ביבליוגרפית.
-          </p>
-        </div>
-      </div>
-        </a>
-    </div>
     </div>
   </div>
-</div>
 </main>
+
+
 
 <footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
@@ -231,8 +172,6 @@
     </div>
   </div>
 </footer>
-
-
 </body>
 
 </html>
