--- a/dataBases.html
+++ b/dataBases.html
@@ -131,15 +131,15 @@
        </div>
       </div>  
      </div>
-     </header>
+  </header>
         
    <main>
     <div class="position-relative">
     <img src="images/Group.png" class="background-image">
     <div class="container p-4 myCardsContainer">
       <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
-    <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
-      <div class="col pb-4">
+      <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
+        <div class="col pb-4">
         <div class="card cardInnerPage">
           <img src="images/Group 89.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
@@ -154,6 +154,7 @@
         </div>
       </div>
       <div class="col pb-4">
+        <a href="databasetypesRisePage.html"  class="text-decoration-none">
         <div class="card cardInnerPage">
           <img src="images/Group 91.png"src="images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
@@ -165,9 +166,11 @@
             <span class="badge badge-pill badge-light w-auto"> 3 דקות</span> 
           </div>
           </div>
+        </a>
         </div>
         <div class="col pb-4">
-          <div class="card cardInnerPage" id="todataBasesByPage">
+          <a href="dataBasesByPage.html"  class="text-decoration-none">
+          <div class="card cardInnerPage">
             <img src="images/Group Chart.png"src="images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
             <div class="card-body d-flex flex-column" style="min-height: 110px;">
               <h5 class="card-title">מאגרי מידע לפי פקולטות</h5>
@@ -178,6 +181,7 @@
               <span class="badge badge-pill badge-light w-auto"> 2 דקות</span> 
             </div>
             </div>
+          </a>
           </div>
     </div>
     </div>
