--- a/englishRisePage.html
+++ b/englishRisePage.html
@@ -101,10 +101,36 @@
 
 
 <!--תפריט ניווט סוף-->
-   
+<header>
+  <div class="header">
+    <div class="container-xxl pb-lg-5 hero-header">
+      <!--פירורי לחם-->
+      <div class="pt-3">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb justify-content-start">
+          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+          <li class="breadcrumb-item" aria-current="page"><a href="searchingArticles.html" class="my-link">חיפוש מתקדם</a> </li>
+          <li class="breadcrumb-item" aria-current="page">חיפוש יעיל בשפה האנגלית</li>
+
+         </ol>
+         </nav> 
+        </div>
+          <!--סוף פירורי לחם-->
+     <div class="container my-lg-5 py-5">
+          <div class="row g-5 py-lg-5">
+            <div class="container">  
+              <div class="section-title position-relative text-start mb-5 pb-2">
+                <h2>חיפוש יעיל בשפה האנגלית</h2>                
+            </div>
+          </div>
+       </div>
+       </div>
+      </div>  
+     </div>
+     </header>  
    <main>
     <div class="container" >
-    <iframe src="allTheRisesFolder/englishRise/thehtmlrisepage.html" width="100%" height="600"></iframe>
+    <iframe src="allTheRisesFolder/englishRise/thehtmlrisepage.html" width="100%" height="500"></iframe>
   </div>
 </main>
 
