--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -130,7 +130,7 @@
    <main class="p-4">
     <div class="position-relative">
       <img src="images/Vector.png" class="background-image">
-      <div class="container p-4 myCardsContainer">
+      <div class="container pt-lg-3 myCardsContainer">
         <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5> 
       <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
         <div class="col pb-4">
@@ -159,7 +159,7 @@
             </div>
         </div>
         <div class="col pb-4">
-        <div class="card cardInnerPage">
+        <div class="card cardInnerPage" id="toAdvancedSearchPage">
           <img src="images/Group 92.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">חיפוש מתקדם במאגרי מידע</h5>
