--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <ul class="dropdown-menu">
           <li> <a href="startpage.html" class="dropdown-item">איך מתחילים&raquo; </a>
             <ul class="submenu dropdown-menu">
-              <li><a class="dropdown-item" href="#">פורטל הספרייה</a></li>
-              <li><a class="dropdown-item" href="#">קטלוג הספרייה</a></li>
+              <li><a class="dropdown-item" href="logInToCatalogVideoPage.html">פורטל הספרייה</a></li>
+              <li><a class="dropdown-item" href="libraryCatalogVideoPage.html">קטלוג הספרייה</a></li>
             </ul>
           </li>
           <li>  <a href="resourcesTypes.html" class="dropdown-item">סוגי מקורות מידע&raquo; </a>
@@ -60,8 +60,8 @@
           </li>
           <li>   <a href="dataBases.html" class="dropdown-item">מאגרי מידע&raquo; </a>
             <ul class="submenu dropdown-menu">
-              <li><a class="dropdown-item" href="#">מהו מאגר מידע</a></li>
-              <li><a class="dropdown-item" href="#">הבדלים בין מאגרי מידע</a></li>
+              <li><a class="dropdown-item" href="whatIsDataBasePage.html">מהו מאגר מידע</a></li>
+              <li><a class="dropdown-item" href="databasetypesRisePage.html">הבדלים בין מאגרי מידע</a></li>
             </ul>
           </li>
           <li>   <a href="searchingArticles.html" class="dropdown-item">חיפוש מאמרים&raquo; </a>
