--- a/startpage.html
+++ b/startpage.html
@@ -139,10 +139,11 @@
     <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
+        <a href="logInToCatalogVideoPage.html"  class="text-decoration-none">
         <div class="card cardInnerPage">
        <img src="images/Group 84.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
-            <h6 class="card-title">אתר הספרייה</h5>
+            <h5 class="card-title">אתר הספרייה</h5>
             <p class="card-text">היכרות בסיסית עם הפורטל והסבר על אופן ההתחברות מעמדת המידע</p>
           </div>
           <div class="p-3 d-none d-md-block">
@@ -151,12 +152,14 @@
               1:40 דקות</span> 
           </div>
       </div>
+        </a>
       </div>
       <div class="col pb-4">
+        <a href="libraryCatalogVideoPage.html"  class="text-decoration-none">
         <div class="card cardInnerPage">
           <img src="images/GroupIconLIB.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
-            <h6 class="card-title">קטלוג הספרייה</h5>
+            <h5 class="card-title">קטלוג הספרייה</h5>
             <p class="card-text"> קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו: חיפוש ספרים, מאמרים ופרויקטי גמר</div>
               <div class="p-3 d-none d-md-block ">
                 <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
@@ -164,6 +167,7 @@
               2:20 דקות</span> 
           </div>
         </div>
+        </a>
       </div> 
     </div>
   </div>
