--- a/advancedSearchVideoPage.html
+++ b/advancedSearchVideoPage.html
@@ -132,7 +132,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 text-center">
-        <iframe allow="autoplay;" allowfullscreen style="border:none" src="https://clipchamp.com/watch/ET0a7r3dk8R/embed" width="100%" height="468"></iframe>
+        <iframe src="https://player.vimeo.com/video/831112279?h=2c668cc357" width="100%" height="468"frameborder="0"  style="border:none" allow="autoplay; fullscreen" allowfullscreen></iframe>
       </div>
     </div>
   </div>
