--- a/bibList.html
+++ b/bibList.html
@@ -138,6 +138,7 @@
       <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
+        <a href="whatisbibListRisePage.html"  class="text-decoration-none">
         <div class="card cardInnerPage">
           <img src="images/Group 99bib.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
@@ -150,8 +151,10 @@
               2 דקות</span> 
           </div>
         </div>
+        </a>
       </div>
       <div class="col pb-4">
+        <a href="createBibListVideoPage.html"  class="text-decoration-none">
         <div class="card cardInnerPage" >
           <img src="images/Group 100.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
@@ -164,8 +167,11 @@
               2:30 דקות</span> 
           </div>
       </div>
+        </a>
       </div>
       <div class="col pb-4">
+        <a href="citationRisePage.html"  class="text-decoration-none">
+
         <div class="card cardInnerPage">
           <img src="images/Group 103.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
@@ -178,6 +184,7 @@
               2 דקות</span> 
           </div>
         </div>
+        </a>
       </div>
     </div>
     </div>
