--- a/resourcesTypes.html
+++ b/resourcesTypes.html
@@ -138,6 +138,7 @@
         <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
+        <a href="informationAssesRisePage.html"  class="text-decoration-none">
         <div class="card cardInnerPage">
           <img src="images/Group 88.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column">
@@ -151,6 +152,7 @@
           </div>
       
         </div>
+        </a>
       </div>
       
       <div class="col pb-4">
